# figuresmanagement

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
api/models/: __init__.py  brands.py  companies.py  countries.py  images.py  products.py  series.py  users.py
api/routers/: brands.py  companies.py  countries.py  products.py  series.py  users.py
api/utils/: db.py
data/: Figures.xlsx
db/: create_table_brands.sql  create_table_company.sql  create_table_coutries.sql  create_table_images.sql  create_table_products.sql  create_table_series.sql  create_table_users.sql
web/: package-lock.json
web/app/: package-lock.json  package.json  vue.config.js
web/app/src/: App.vue
web/app/src/components/: HelloWorld.vue
