[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["sonph"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
pytest = "^7.2.0"
black = "^22.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
